--- a/project/app/index.html
+++ b/project/app/index.html
@@ -339,6 +339,7 @@
             </section>
         </footer>
     </div>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
