--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -18,6 +18,11 @@
                 <img class="img" src="img/1.jpg" alt="cell">
             </div>
         </div>
+        <div class="wrapslid">
+            <div class="cell" data-atr="1">
+                <img class="img" src="img/1.jpg" alt="cell">
+            </div>
+        </div>
     </div>
     <button class="btn">Пуск</button>
     <script src="js/jquery-3.5.1.min.js"></script>
