--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -24,6 +24,7 @@
             </div>
         </div>
     </div>
+    <p class="text"></p>
     <button class="btn">Пуск</button>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/casino.js"></script>
