--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -7,43 +7,50 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="wrap_panel2">
-        <p>Наличные: <label for="#" id="cash"></label></p>
-        <p>Ставка: <label for="#" id="rate"></label></p>
-    </div>
-    <div class="wrap">
-        <div class="wrapslid">
-            <div class="cell" data-atr="1">
-                <img class="img" src="img/1.jpg" alt="cell">
+    <div class="message"><h1>Внимание! <br>Поверните телефон в горизонтальное положение</h1></div>
+    <div class="main">
+        <div class="wrap_panel2">
+            <p>Наличные: <label for="#" id="cash"></label></p>
+            <p>Ставка: <label for="#" id="rate"></label></p>
+        </div>
+        <div class="wrap">
+            <div class="wrapslid">
+                <div class="cell" data-atr="1">
+                    <img class="img" src="img/1.jpg" alt="cell">
+                </div>
+            </div>
+            <div class="wrapslid">
+                <div class="cell" data-atr="1">
+                    <img class="img" src="img/1.jpg" alt="cell">
+                </div>
+            </div>
+            <div class="wrapslid">
+                <div class="cell" data-atr="1">
+                    <img class="img" src="img/1.jpg" alt="cell">
+                </div>
+            </div>
+            <div class="wrapslid">
+                <div class="cell" data-atr="1">
+                    <img class="img" src="img/1.jpg" alt="cell">
+                </div>
             </div>
         </div>
-        <div class="wrapslid">
-            <div class="cell" data-atr="1">
-                <img class="img" src="img/1.jpg" alt="cell">
+        <p class="text">Нажми кнопку!</p>
+        <div class="wrap_panel1">
+            <div class="wrap_left">
+                <p>Выигрыш: <label for="select_rate" id="win"></label></p>
+                <p>Ставка: <label for="#" id="rate_mobile"></label></p>
             </div>
-        </div>
-        <div class="wrapslid">
-            <div class="cell" data-atr="1">
-                <img class="img" src="img/1.jpg" alt="cell">
+            <button class="btn"></button>
+            <div class="wrap_right">
+                <p>Наличные: <label for="#" id="cash_mobile"></label></p>
+                <div class="wrap_select">
+                    <div class="text_rate">Выбрать ставку</div>
+                    <div class="select_rate">100</div>
+                    <div class="select_rate">250</div>
+                    <div class="select_rate">500</div>
+                </div>
             </div>
-        </div>
-        <div class="wrapslid">
-            <div class="cell" data-atr="1">
-                <img class="img" src="img/1.jpg" alt="cell">
-            </div>
-        </div>
-    </div>
-    <p class="text">Нажми кнопку!</p>
-    <div class="wrap_panel1">
-        <p>Выигрыш: <label for="select_rate" id="win"></label></p>
-        <button class="btn"></button>
-        <div class="wrap_select">
-            <div class="text_rate">Выбрать ставку</div>
-            <div class="select_rate">100</div>
-            <div class="select_rate">250</div>
-            <div class="select_rate">500</div>
-        </div>
-        
     </div>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/casino.js"></script>
